--- a/frappe/core/doctype/system_settings/system_settings.json
+++ b/frappe/core/doctype/system_settings/system_settings.json
@@ -219,6 +219,7 @@
    "set_only_once": 0,
    "unique": 0
   },
+
   {
    "allow_bulk_edit": 0,
    "allow_on_submit": 0,
@@ -896,6 +897,36 @@
    "unique": 0
   },
   {
+   "allow_bulk_edit": 0, 
+   "allow_on_submit": 0, 
+   "bold": 0, 
+   "collapsible": 0, 
+   "columns": 0, 
+   "fieldname": "allow_consecutive_login_attempts", 
+   "fieldtype": "Int", 
+   "hidden": 0, 
+   "ignore_user_permissions": 0, 
+   "ignore_xss_filter": 0, 
+   "in_filter": 0, 
+   "in_global_search": 0, 
+   "in_list_view": 0, 
+   "in_standard_filter": 0, 
+   "label": "Allow Consecutive Login Attempts ", 
+   "length": 0, 
+   "no_copy": 0, 
+   "permlevel": 0, 
+   "precision": "", 
+   "print_hide": 0, 
+   "print_hide_if_no_value": 0, 
+   "read_only": 0, 
+   "remember_last_selected_value": 0, 
+   "report_hide": 0, 
+   "reqd": 0, 
+   "search_index": 0, 
+   "set_only_once": 0, 
+   "unique": 0
+  }, 
+  {
    "allow_bulk_edit": 0,
    "allow_on_submit": 0,
    "bold": 0,
@@ -1374,7 +1405,7 @@
  "issingle": 1,
  "istable": 0,
  "max_attachments": 0,
- "modified": "2018-05-23 16:45:46.261765",
+ "modified": "2018-09-23 16:45:46.261765",
  "modified_by": "Administrator",
  "module": "Core",
  "name": "System Settings",
